[tool.poetry]
name = "pinotdb"
version = "5.1.2"
description = "Python DB-API and SQLAlchemy dialect for Pinot."
authors = ["Beto Dealmeida <beto@dealmeida.net>", "Devesh Agrawal <devesh.agrawal@gmail.com>", "Xiang Fu <xiangfu.1024@gmail.com>", "Rong Rong <rongr@apache.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pinotdb"}]
homepage = "https://github.com/python-pinot-dbapi/pinot-dbapi"

[tool.poetry.dependencies]
python = ">=3.7,<4"
ciso8601 = "^2.1.3"
httpx = "^0.23.0"
sqlalchemy = {version = ">=1.4,<2", optional = true}
requests = "^2.25.0"

[tool.poetry.extras]
sqlalchemy = ["sqlalchemy", "requests"]

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
parameterized = "^0.8.1"
tox = "^3.26.0"
urllib3 = "^1.26.12"
flake8 = "^5"
mock = "^4.0.3"
responses = "^0.22.0"
ipdb = "^0.13.13"

[tool.pytest.ini_options]
addopts = "--cov=pinotdb --cov-branch"

[tool.coverage.report]
show_missing = true

[tool.poetry.plugins."sqlalchemy.dialects"]
pinot = "pinotdb.sqlalchemy:PinotHTTPDialect"
"pinot.http" = "pinotdb.sqlalchemy:PinotHTTPDialect"
"pinot.https" = "pinotdb.sqlalchemy:PinotHTTPSDialect"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
