[tool.poetry]
name = "pinotdb"
version = "7.0.0"
description = "Python DB-API and SQLAlchemy dialect for Pinot."
authors = ["Beto Dealmeida <beto@dealmeida.net>", "Devesh Agrawal <devesh.agrawal@gmail.com>", "Xiang Fu <xiangfu.1024@gmail.com>", "Rong Rong <rongr@apache.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pinotdb"}]
homepage = "https://github.com/python-pinot-dbapi/pinot-dbapi"

[tool.poetry.dependencies]
python = ">=3.10,<4"
ciso8601 = "^2.1.3"
httpx = ">=0.28.1,<0.29"
sqlalchemy = {version = ">=1.4,<2", optional = true}
requests = "^2.25.0"
# Pin urllib3 to a known-safe version (requests depends on urllib3 transitively).
urllib3 = "==2.6.0"
# Explicitly pinning h11 to version 0.16.0 to override a CVE-affected transitive dependency in httpx.
h11 = "0.16.0"

[tool.poetry.extras]
sqlalchemy = ["sqlalchemy", "requests"]

[tool.poetry.group.dev.dependencies]
coverage = ">=6.5,<8.0"
pytest = ">=7.1.3,<9.0.0"
pytest-cov = ">=4,<6"
parameterized = ">=0.8.1,<0.10.0"
tox = ">=3.26,<5.0"
urllib3 = "==2.6.0"
flake8 = "^5"
mock = ">=4.0.3,<6.0.0"
responses = ">=0.22,<0.26"
ipdb = "^0.13.13"
filelock = "^3.20.1"

[tool.pytest.ini_options]
addopts = "--cov=pinotdb --cov-branch"

[tool.coverage.report]
show_missing = true

[tool.poetry.plugins."sqlalchemy.dialects"]
pinot = "pinotdb.sqlalchemy:PinotHTTPDialect"
"pinot.http" = "pinotdb.sqlalchemy:PinotHTTPDialect"
"pinot.https" = "pinotdb.sqlalchemy:PinotHTTPSDialect"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
